RESOLVED FIXED125556
[Mac] WebKit doesn't deal with longer bundle versions correctly
https://bugs.webkit.org/show_bug.cgi?id=125556
Summary [Mac] WebKit doesn't deal with longer bundle versions correctly
Mark Rowe (bdash)
Reported 2013-12-10 21:47:48 PST
When the major component of the bundle version contain five digits rather than four, WebKit mistakenly includes the second digit in the user agent string. <rdar://problem/15634192>
Attachments
Patch (5.10 KB, patch)
2013-12-10 21:50 PST, Mark Rowe (bdash)
no flags
Mark Rowe (bdash)
Comment 1 2013-12-10 21:50:59 PST
WebKit Commit Bot
Comment 2 2013-12-10 23:22:41 PST
Comment on attachment 218933 [details] Patch Clearing flags on attachment: 218933 Committed r160412: <http://trac.webkit.org/changeset/160412>
WebKit Commit Bot
Comment 3 2013-12-10 23:22:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.