<http://webkit.org/b/125556> WebKit doesn't deal with longer bundle versions correctly <rdar://problem/15634192>

Reviewed by Dan Bernstein.

Source/WebKit/mac:

* WebView/WebView.mm:
(createUserVisibleWebKitVersionString): Strip as many leading digits as is necessary to
bring the major component of the version down to 3 digits.

Source/WebKit2:

* UIProcess/mac/WebPageProxyMac.mm:
(WebKit::userVisibleWebKitVersionString): Strip as many leading digits as is necessary to
bring the major component of the version down to 3 digits.


Canonical link: https://commits.webkit.org/143613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160412 268f45cc-cd09-0410-ab3c-d52691b4dbfc